:recycle: steady 편의 메서드 수정